@@ -11,8 +11,10 @@ public class DuckyScripts {
 
 	private static Robot r;
 	private static int defaultDelay;
-	private static ArrayList<Character> regKeys=(ArrayList<Character>) "abcdefghijklmnopqrstuvwxyz`1234567890-=[]\\;',./ ".chars().mapToObj((i)->Character.valueOf((char) i)).collect(Collectors.toList());
-	private static ArrayList<Character> shiftKeys=(ArrayList<Character>) "ABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^&*()_+{}|:\"<>?".chars().mapToObj((i)->Character.valueOf((char) i)).collect(Collectors.toList());
+	private static ArrayList<Character> regKeys=(ArrayList<Character>) "abcdefghijklmnopqrstuvwxyz`1234567890-=[]\\;',./ ".chars().mapToObj((i)->Character.valueOf((char) i)).collect(Collectors
+		.toList());
+	private static ArrayList<Character> shiftKeys=(ArrayList<Character>) "ABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^&*()_+{}|:\"<>?".chars().mapToObj((i)->Character.valueOf((char) i)).collect(Collectors
+		.toList());
 
 	/**
 	 * Cycles though lines from DuckyScript corresponding to {@link scriptName}
@@ -24,10 +26,10 @@ public class DuckyScripts {
 	 */
 	public static boolean run(String scriptName) {
 		Scanner in=null;
-		try {
+		try{
 			r=new Robot();
 			in=new Scanner(new File("scripts\\"+scriptName));
-			while(in.hasNextLine()) {
+			while(in.hasNextLine()){
 				String line=in.nextLine();
 				while(line.endsWith(" "))
 					line=line.substring(0, line.length()-1);
@@ -35,9 +37,9 @@ public class DuckyScripts {
 					handleLine(line);
 			}
 			return true;
-		}catch (Exception e) {
+		}catch(Exception e){
 			return false;
-		}finally {
+		}finally{
 			if(in!=null)
 				in.close();
 		}
@@ -57,7 +59,7 @@ public class DuckyScripts {
 	private static void handleLine(String line) throws InterruptedException, IllegalArgumentException, IllegalAccessException, NoSuchFieldException, SecurityException {
 		String command=line;
 		String args="";
-		if(line.contains(" ")) {
+		if(line.contains(" ")){
 			command=line.substring(0, line.indexOf(" "));
 			args=line.substring(line.indexOf(" ")+1);
 		}
@@ -66,15 +68,15 @@ public class DuckyScripts {
 			command="WINDOWS";
 		else if(args.equals("GUI"))
 			args="WINDOWS";
-		else if(command.equals("PAGEUP")||command.equals("PAGEDOWN"))
+		else if(command.equals("PAGEUP") || command.equals("PAGEDOWN"))
 			command=command.replace("PAGE", "PAGE_");
-		else if(args.equals("PAGEUP")||args.equals("PAGEDOWN"))
+		else if(args.equals("PAGEUP") || args.equals("PAGEDOWN"))
 			args=args.replace("PAGE", "PAGE_");
-		else if(command.equals("UPARROW")||command.equals("DOWNARROW")||command.equals("LEFTARROW")||command.equals("RIGHTARROW"))
+		else if(command.equals("UPARROW") || command.equals("DOWNARROW") || command.equals("LEFTARROW") || command.equals("RIGHTARROW"))
 			command=command.replace("ARROW", "");
-		else if(args.equals("UPARROW")||args.equals("DOWNARROW")||args.equals("LEFTARROW")||args.equals("RIGHTARROW"))
+		else if(args.equals("UPARROW") || args.equals("DOWNARROW") || args.equals("LEFTARROW") || args.equals("RIGHTARROW"))
 			args=args.replace("ARROW", "");
-		else if(command.equals("MENU")||command.equals("APP")) {
+		else if(command.equals("MENU") || command.equals("APP")){
 			command="SHIFT";
 			args="F10";
 		}else if(command.equals("CTRL"))
@@ -90,20 +92,20 @@ public class DuckyScripts {
 		else if(args.equals("BREAK"))
 			args="PAUSE";
 
-		if(command.equals("DEFAULT_DELAY")||command.equals("DEFAULTDELAY"))
+		if(command.equals("DEFAULT_DELAY") || command.equals("DEFAULTDELAY"))
 			defaultDelay=Integer.parseInt(args);
 		else if(command.equals("DELAY"))
 			Thread.sleep(Integer.parseInt(args));
-		else if(command.equals("STRING")) {
+		else if(command.equals("STRING")){
 			type(args);
-		}else if(command.equals("WINDOWS")||command.equals("SHIFT")||command.equals("CONTROL")||command.equals("ALT")) {
+		}else if(command.equals("WINDOWS") || command.equals("SHIFT") || command.equals("CONTROL") || command.equals("ALT")){
 			r.keyPress(KeyEvent.class.getField("VK_"+command).getInt(null));
-			if(!args.isEmpty()) {
+			if(!args.isEmpty()){
 				r.keyPress(KeyEvent.class.getField("VK_"+args.toUpperCase()).getInt(null));
 				r.keyRelease(KeyEvent.class.getField("VK_"+args.toUpperCase()).getInt(null));
 			}
 			r.keyRelease(KeyEvent.class.getField("VK_"+command).getInt(null));
-		}else if(!line.startsWith("REM")) {
+		}else if(!line.startsWith("REM")){
 			r.keyPress(KeyEvent.class.getField("VK_"+command).getInt(null));
 			r.keyRelease(KeyEvent.class.getField("VK_"+command).getInt(null));
 		}
@@ -117,10 +119,10 @@ public class DuckyScripts {
 	 */
 	private static void type(String toType) {
 		for(char c:toType.toCharArray())
-			if(regKeys.indexOf(c)!=-1) {
+			if(regKeys.indexOf(c)!=-1){
 				r.keyPress(KeyEvent.getExtendedKeyCodeForChar(c));
 				r.keyRelease(KeyEvent.getExtendedKeyCodeForChar(c));
-			}else {
+			}else{
 				r.keyPress(KeyEvent.VK_SHIFT);
 				r.keyPress(KeyEvent.getExtendedKeyCodeForChar(regKeys.get(shiftKeys.indexOf(c))));
 				r.keyRelease(KeyEvent.getExtendedKeyCodeForChar(regKeys.get(shiftKeys.indexOf(c))));
